--- a/less/nav.less
+++ b/less/nav.less
@@ -4,11 +4,13 @@ nav{
   background-color: @colorBright;
   display:flex;
   align-items: center;
-  border-bottom: 5px;
+  border-top: 2px;
+  border-bottom: 2px;
   border-left: 0;
   border-right: 0;
   border-color: @colorText;
   border-style: solid;
+
 
   font-weight: bold;
   font-size: @navSize *0.5;
@@ -60,7 +62,7 @@ nav{
     min-height: 100px;
     width:100%;
     padding-bottom: 10px;
-    background-color: @colorText;
+    background-color: @colorNavBG;
     position:absolute;
     right: 0;
     top:@navSize + 3px;
