--- a/less/vars.less
+++ b/less/vars.less
@@ -1,7 +1,8 @@
-@colorDark:#39375b;
-@colorMain:#f5b0cb;
-@colorBright:#dc6acf;
-@colorText:#745c97;
-@colorLight: #f8e1f5;
+@colorDark: #d1ebee;
+@colorMain: #c0def3;
+@colorBright:#ffff;
+@colorText: #000000;
+@colorLight: #e1eef8;
+@colorNavBG: #E1EEF8FF;
+@navSize:55px;
 
-@navSize:50px;
