--- a/less/main.less
+++ b/less/main.less
@@ -1,10 +1,13 @@
 *{
   margin:0;
 }
-
+nav{
+  font-family: 'Lemon Milk', sans-serif;
+}
 html,body{
   width:100%;
   background-color: @colorDark;
+  font-family: 'Transducer Hairline', sans-serif;
 }
 h1,h2,h3,h4,h5,h6,p{
   
@@ -24,7 +27,7 @@ h1,h2,h3,h4,h5,h6,p{
   margin-top: 40px;
   min-height:400px;
 
-  border-width: 5px;
+  border-width: 2px;
   border-style: solid;
 
   width: 100%;
@@ -34,12 +37,13 @@ h1,h2,h3,h4,h5,h6,p{
 
   @media screen and (min-width: 800px){
     width: 85%;
-    border-radius: 10px;
+    border-radius: 5px;
   }
 
   p.intro{
     max-width:100%;
     margin:20px;
+    text-align: center;
   }
 
   .menu-items{
