--- a/less/style.css
+++ b/less/style.css
@@ -1,16 +1,17 @@
 nav {
   width: 100%;
-  min-height: 50px;
-  background-color: #dc6acf;
+  min-height: 55px;
+  background-color: #ffff;
   display: flex;
   align-items: center;
-  border-bottom: 5px;
+  border-top: 2px;
+  border-bottom: 2px;
   border-left: 0;
   border-right: 0;
-  border-color: #745c97;
+  border-color: #000000;
   border-style: solid;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 27.5px;
 }
 nav a {
   text-decoration: none;
@@ -23,15 +24,15 @@ nav a {
   }
 }
 nav #menu-button {
-  height: 50px;
-  width: 50px;
-  background-color: #f8e1f5;
+  height: 55px;
+  width: 55px;
+  background-color: #e1eef8;
   display: block;
   position: absolute;
   right: 0;
   vertical-align: center;
   text-align: center;
-  font-size: 37.5px;
+  font-size: 41.25px;
   font-weight: bold;
   font-family: Verdana, sans-serif;
   cursor: pointer;
@@ -53,10 +54,10 @@ nav #menu {
   min-height: 100px;
   width: 100%;
   padding-bottom: 10px;
-  background-color: #745c97;
+  background-color: #E1EEF8FF;
   position: absolute;
   right: 0;
-  top: 53px;
+  top: 58px;
   display: none;
 }
 nav #menu a {
@@ -66,10 +67,14 @@ nav #menu a {
 * {
   margin: 0;
 }
+nav {
+  font-family: 'Lemon Milk', sans-serif;
+}
 html,
 body {
   width: 100%;
-  background-color: #39375b;
+  background-color: #d1ebee;
+  font-family: 'Transducer Hairline', sans-serif;
 }
 #wrapper {
   width: 100%;
@@ -78,11 +83,11 @@ body {
   justify-content: center;
 }
 #content {
-  background-color: #f5b0cb;
-  border-color: #745c97;
+  background-color: #c0def3;
+  border-color: #000000;
   margin-top: 40px;
   min-height: 400px;
-  border-width: 5px;
+  border-width: 2px;
   border-style: solid;
   width: 100%;
   border-radius: 0;
@@ -91,12 +96,13 @@ body {
 @media screen and (min-width: 800px) {
   #content {
     width: 85%;
-    border-radius: 10px;
+    border-radius: 5px;
   }
 }
 #content p.intro {
   max-width: 100%;
   margin: 20px;
+  text-align: center;
 }
 #content .menu-items {
   display: flex;
@@ -110,7 +116,7 @@ body {
   width: 90%;
   min-height: 100px;
   margin: 20px;
-  background-color: #f8e1f5;
+  background-color: #e1eef8;
 }
 #content .menu-items .item img {
   width: 100px;
