--- a/less/nav.less
+++ b/less/nav.less
@@ -13,11 +13,14 @@ nav{
 
 
   font-weight: bold;
-  font-size: @navSize *0.5;
+  font-size: @navSize *0.3;
 
   a{
     text-decoration: none;
     margin-left: 10px;
+  }
+
+  #links{
     display:none;
 
     @media screen and (min-width: 800px) {
@@ -65,7 +68,7 @@ nav{
     background-color: @colorNavBG;
     position:absolute;
     right: 0;
-    top:@navSize + 3px;
+    top:@navSize + 11px;
     display:none;
 
     a{
