--- a/less/vars.less
+++ b/less/vars.less
@@ -4,5 +4,6 @@
 @colorText: #000000;
 @colorLight: #e1eef8;
 @colorNavBG: #E1EEF8FF;
-@navSize:55px;
+//@navSize:55px;
+@navSize:image-height("../images/logo.png");
 
