--- a/less/style.css
+++ b/less/style.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  min-height: 55px;
+  min-height: 78px;
   background-color: #ffff;
   display: flex;
   align-items: center;
@@ -11,28 +11,30 @@ nav {
   border-color: #000000;
   border-style: solid;
   font-weight: bold;
-  font-size: 27.5px;
+  font-size: 23.4px;
 }
 nav a {
   text-decoration: none;
   margin-left: 10px;
+}
+nav #links {
   display: none;
 }
 @media screen and (min-width: 800px) {
-  nav a {
+  nav #links {
     display: inline;
   }
 }
 nav #menu-button {
-  height: 55px;
-  width: 55px;
+  height: 78px;
+  width: 78px;
   background-color: #e1eef8;
   display: block;
   position: absolute;
   right: 0;
   vertical-align: center;
   text-align: center;
-  font-size: 41.25px;
+  font-size: 58.5px;
   font-weight: bold;
   font-family: Verdana, sans-serif;
   cursor: pointer;
@@ -57,7 +59,7 @@ nav #menu {
   background-color: #E1EEF8FF;
   position: absolute;
   right: 0;
-  top: 58px;
+  top: 89px;
   display: none;
 }
 nav #menu a {
