--- a/less/main.less
+++ b/less/main.less
@@ -12,7 +12,9 @@ html,body{
 h1,h2,h3,h4,h5,h6,p{
   
 }
-
+a{
+  color: @colorLinks;
+}
 #wrapper{
   width: 100%;
   display: flex;
@@ -20,19 +22,58 @@ h1,h2,h3,h4,h5,h6,p{
   justify-content: center;
 }
 
+a:hover{
+  color: @colorHover;
+}
+
+a:visited{
+  color: @colorVisited;
+}
+
+#animation{
+  padding-top: 22px;
+  animation: slide 2s ease-in-out;
+}
+
+#dish {
+  background-image: url("../images/banner.png");
+  padding-top: 2px;
+  color: white;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: dish-image 2s ease-in-out;
+
+  @media screen and (max-width: 800px){
+   img{
+     display: none;
+   }
+    background-image: url("../images/800.png") ;
+    animation: mobile-image 2s ease-in-out;
+  }
+  }
+
+#dish p{
+  animation: p-slide 2s ease-in-out;
+  @media screen and (max-width: 800px){
+      display: none;
+    }
+}
+
+
 #content{
   background-color: @colorMain;
   border-color: @colorText;
-
   margin-top: 40px;
   min-height:400px;
-
   border-width: 2px;
   border-style: solid;
-
   width: 100%;
   border-radius:0;
-
   justify-content: center;
 
   @media screen and (min-width: 800px){
@@ -86,4 +127,49 @@ h1,h2,h3,h4,h5,h6,p{
     }
   }
 
+}
+
+@keyframes slide {
+  0%{
+   transform: translate(-500px,0px);
+  }
+  75%{
+    transform: translate(0px, 70px);
+  }
+}
+
+@keyframes p-slide{
+  0%{
+    transform: translate(-500px,0px);
+  }
+  75%{
+    transform: translate(0px, 70px);
+  }
+}
+
+@keyframes dish-image {
+  0%{
+    opacity: 0;
+  }
+  75%{
+    opacity:1;
+  }
+}
+
+@keyframes mobile-image {
+  0%{
+    opacity: 0;
+  }
+  75%{
+    opacity:1;
+  }
+}
+
+@keyframes round {
+  0%{
+    transform: rotate(0deg) ;
+  }
+  75%{
+    transform: rotate(360deg) ;
+  }
 }
