--- a/less/vars.less
+++ b/less/vars.less
@@ -4,6 +4,9 @@
 @colorText: #000000;
 @colorLight: #e1eef8;
 @colorNavBG: #E1EEF8FF;
+@colorLinks: #000000;
+@colorHover: #a5c0d3;
+@colorVisited: #639ccb;
 //@navSize:55px;
 @navSize:image-height("../images/logo.png");
 
