--- a/less/style.css
+++ b/less/style.css
@@ -78,11 +78,54 @@ body {
   background-color: #d1ebee;
   font-family: 'Transducer Hairline', sans-serif;
 }
+a {
+  color: #000000;
+}
 #wrapper {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+a:hover {
+  color: #a5c0d3;
+}
+a:visited {
+  color: #639ccb;
+}
+#animation {
+  padding-top: 22px;
+  animation: slide 2s ease-in-out;
+}
+#dish {
+  background-image: url("../images/banner.png");
+  padding-top: 2px;
+  color: white;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: dish-image 2s ease-in-out;
+}
+@media screen and (max-width: 800px) {
+  #dish {
+    background-image: url("../images/800.png");
+    animation: mobile-image 2s ease-in-out;
+  }
+  #dish img {
+    display: none;
+  }
+}
+#dish p {
+  animation: p-slide 2s ease-in-out;
+}
+@media screen and (max-width: 800px) {
+  #dish p {
+    display: none;
+  }
 }
 #content {
   background-color: #c0def3;
@@ -138,5 +181,45 @@ body {
 #content .menu-items .item .desc p {
   max-width: 100%;
   padding: 5px;
+}
+@keyframes slide {
+  0% {
+    transform: translate(-500px, 0px);
+  }
+  75% {
+    transform: translate(0px, 70px);
+  }
+}
+@keyframes p-slide {
+  0% {
+    transform: translate(-500px, 0px);
+  }
+  75% {
+    transform: translate(0px, 70px);
+  }
+}
+@keyframes dish-image {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+}
+@keyframes mobile-image {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+}
+@keyframes round {
+  0% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=style.css.map */
