--- a/less/vars.less
+++ b/less/vars.less
@@ -5,7 +5,7 @@
 @colorLight: #e1eef8;
 @colorNavBG: #E1EEF8FF;
 @colorLinks: #000000;
-@colorHover: #a5c0d3;
+@colorHover: #2073ad;
 @colorVisited: #639ccb;
 //@navSize:55px;
 @navSize:image-height("../images/logo.png");
