--- a/less/main.less
+++ b/less/main.less
@@ -36,7 +36,7 @@ a:hover{
 #dish {
   background-image: url("../images/banner.png");
   padding-top: 2px;
-  color: white;
+  color: @colorBright;
   height: 500px;
   width: 100%;
   display: flex;
