--- a/less/main.less
+++ b/less/main.less
@@ -10,9 +10,22 @@ html,body{
   font-family: 'Transducer Hairline', sans-serif;
 }
 h1,h2,h3,h4,h5,h6,p{
-  
+
 }
+
+#Home{
+  padding-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  p{
+    justify-content: space-between;
+  }
+}
+
 #wrapper{
+
   width: 100%;
   display: flex;
   align-items: center;
