--- a/less/main.less
+++ b/less/main.less
@@ -4,6 +4,7 @@
 nav{
   font-family: 'Lemon Milk', sans-serif;
 }
+
 html,body{
   width:100%;
   background-color: @colorDark;
@@ -11,6 +12,10 @@ html,body{
 }
 h1,h2,h3,h4,h5,h6,p{
 
+}
+
+#nav-icons{
+  padding-left: 580px;
 }
 
 #Home{
@@ -23,6 +28,7 @@ h1,h2,h3,h4,h5,h6,p{
     justify-content: space-between;
   }
 }
+
 
 #wrapper{
 
@@ -97,7 +103,18 @@ a:hover{
     margin:20px;
     text-align: center;
   }
-
+  p.featured{
+    max-width: 100%;
+    margin: 20px;
+    text-align: center;
+    font-family: 'Lemon Milk', sans-serif;
+  }
+  p.spicy{
+    max-width: 100%;
+    margin: 20px;
+    text-align: center;
+    font-family: 'Lemon Milk', sans-serif;
+  }
   .menu-items{
     display: flex;
     flex-direction: column;
