--- a/less/main.less
+++ b/less/main.less
@@ -98,6 +98,10 @@ a:hover{
     border-radius: 5px;
   }
 
+  .interior{
+    margin:40px;
+  }
+
   p.intro{
     max-width:100%;
     margin:20px;
