--- a/less/style.css
+++ b/less/style.css
@@ -78,6 +78,18 @@ body {
   background-color: #d1ebee;
   font-family: 'Transducer Hairline', sans-serif;
 }
+#nav-icons {
+  padding-left: 580px;
+}
+#Home {
+  padding-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#Home p {
+  justify-content: space-between;
+}
 #wrapper {
   width: 100%;
   display: flex;
@@ -97,7 +109,7 @@ a:hover {
 #dish {
   background-image: url("../images/banner.png");
   padding-top: 2px;
-  color: white;
+  color: #ffff;
   height: 500px;
   width: 100%;
   display: flex;
@@ -141,10 +153,25 @@ a:hover {
     border-radius: 5px;
   }
 }
+#content .interior {
+  margin: 40px;
+}
 #content p.intro {
   max-width: 100%;
   margin: 20px;
   text-align: center;
+}
+#content p.featured {
+  max-width: 100%;
+  margin: 20px;
+  text-align: center;
+  font-family: 'Lemon Milk', sans-serif;
+}
+#content p.spicy {
+  max-width: 100%;
+  margin: 20px;
+  text-align: center;
+  font-family: 'Lemon Milk', sans-serif;
 }
 #content .menu-items {
   display: flex;
@@ -221,14 +248,6 @@ a:hover {
   }
   75% {
     opacity: 1;
-  }
-}
-@keyframes round {
-  0% {
-    transform: rotate(0deg);
-  }
-  75% {
-    transform: rotate(360deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
