--- a/less/main.less
+++ b/less/main.less
@@ -10,9 +10,10 @@ html,body{
   background-color: @colorDark;
   font-family: 'Transducer Hairline', sans-serif;
 }
-h1,h2,h3,h4,h5,h6,p{
-
+h1{
+  font-family: 'Lemon Milk', sans-serif;
 }
+
 
 #nav-icons{
   padding-left: 580px;
@@ -45,6 +46,7 @@ a{
 a:hover{
   color: @colorHover;
 }
+
 
 
 #animation{
@@ -213,3 +215,66 @@ a:hover{
     opacity:1;
   }
 }
+
+#main-about{
+  background-image: url("../images/Restaurant.jpeg");
+  padding-top: 2px;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  h1{
+    color: @colorBright;
+  }
+}
+
+#header{
+  padding-top: 15px;
+  text-align: center;
+  font-size: 30px;
+  background-color: white;
+}
+
+#column\ 1{
+  //float: left;
+  //width: 50%;
+  align-items: center;
+  line-height: 2.5;
+  padding: 25px 25px 50px;
+
+  h1{
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+#column\ 2{
+  line-height: 2.5;
+  content: "";
+  display: table;
+  padding: 25px 4px 50px 45px;
+  align-items: center;
+
+  h1{
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+#about-image{
+  background-image: url("../images/sitting.jpeg");
+  padding-top: 2px;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
