--- a/less/style.css
+++ b/less/style.css
@@ -78,6 +78,9 @@ body {
   background-color: #d1ebee;
   font-family: 'Transducer Hairline', sans-serif;
 }
+h1 {
+  font-family: 'Lemon Milk', sans-serif;
+}
 #nav-icons {
   padding-left: 580px;
 }
@@ -249,5 +252,56 @@ a:hover {
   75% {
     opacity: 1;
   }
+}
+#main-about {
+  background-image: url("../images/Restaurant.jpeg");
+  padding-top: 2px;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#main-about h1 {
+  color: #ffff;
+}
+#header {
+  padding-top: 15px;
+  text-align: center;
+  font-size: 30px;
+  background-color: white;
+}
+#column\ 1 {
+  align-items: center;
+  line-height: 2.5;
+  padding: 25px 25px 50px;
+}
+#column\ 1 h1 {
+  font-size: 20px;
+  text-align: center;
+}
+#column\ 2 {
+  line-height: 2.5;
+  content: "";
+  display: table;
+  padding: 25px 4px 50px 45px;
+  align-items: center;
+}
+#column\ 2 h1 {
+  font-size: 20px;
+  text-align: center;
+}
+#about-image {
+  background-image: url("../images/sitting.jpeg");
+  padding-top: 2px;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
