--- a/less/main.less
+++ b/less/main.less
@@ -256,7 +256,7 @@ a:hover{
   line-height: 2.5;
   content: "";
   display: table;
-  padding: 25px 4px 50px 45px;
+  padding: 25px 25px 50px;
   align-items: center;
 
   h1{
