--- a/less/main.less
+++ b/less/main.less
@@ -277,4 +277,14 @@ a:hover{
   background-size: cover;
 }
 
+#column {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-top: 35px;
 
+  div{
+    padding-bottom: 15px;
+  }
+}
