--- a/less/main.less
+++ b/less/main.less
@@ -285,6 +285,12 @@ a:hover{
   padding-top: 35px;
 
   div{
-    padding-bottom: 35px;
+    padding-bottom: 15px;
   }
-}
+  @media screen and (max-width: 800px) {
+   img{
+     width: 90%;
+     display: flex;
+     padding-left: 25px;
+   }
+  }}
