contact page and minor tweaks
Created contact page. Some js tweaks--changed it so that the menu page items drop down by the whole header section and not just by clicking the arrows. Changed drop-down menu positioning

--- a/less/main.less
+++ b/less/main.less
@@ -47,7 +47,27 @@ a:hover{
   color: @colorHover;
 }
 
+.text{
+  margin-top:10px;
+  margin-right: 60px;
+  margin-bottom: 10px;
+  margin-left: 60px;
+}
 
+input,textarea{
+  border: 2px solid;
+  border-radius: 5px;
+}
+form{
+  margin-top:10px;
+}
+
+.flex{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 #animation{
   padding-top: 22px;
@@ -147,6 +167,7 @@ a:hover{
         background-color: white;
         height: 30px;
         padding-left: 10px;
+        cursor: pointer;
 
         i{
           margin-left:0px;
