--- a/less/style.css
+++ b/less/style.css
@@ -59,7 +59,7 @@ nav #menu {
   background-color: #E1EEF8FF;
   position: absolute;
   right: 0;
-  top: 89px;
+  top: 87px;
   display: none;
 }
 nav #menu a {
@@ -104,6 +104,26 @@ a {
 }
 a:hover {
   color: #2073ad;
+}
+.text {
+  margin-top: 10px;
+  margin-right: 60px;
+  margin-bottom: 10px;
+  margin-left: 60px;
+}
+input,
+textarea {
+  border: 2px solid;
+  border-radius: 5px;
+}
+form {
+  margin-top: 10px;
+}
+.flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #animation {
   padding-top: 22px;
@@ -199,6 +219,7 @@ a:hover {
   background-color: white;
   height: 30px;
   padding-left: 10px;
+  cursor: pointer;
 }
 #content .menu-items .item h2 i {
   margin-left: 0px;
